Add integration stests for Anthropic and OpenAI

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,12 @@ dependencies = [
 valkey = [
     "valkey>=6.0.0",
 ]
+anthropic = [
+    "anthropic>=0.30.0",
+]
+openai = [
+    "openai>=1.0.0",
+]
 dev = [
     "pytest>=7.0.0",
     "pytest-asyncio>=0.21.0",
@@ -51,6 +57,8 @@ dev = [
     "ruff>=0.1.0",
     "black>=23.0.0",
     "valkey>=6.0.0",
+    "anthropic>=0.30.0",
+    "openai>=1.0.0",
 ]
 
 [project.urls]
@@ -79,3 +87,6 @@ warn_unused_ignores = true
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 asyncio_mode = "auto"
+# By default, exclude integration tests (they require API keys)
+# Run integration tests: pytest tests/integration -v
+addopts = "--ignore=tests/integration"
